# xp_analyzer

./: .gitignore  DESIGN.md  pyproject.toml
docs/: ARCHITECTURE_DECISIONS.md
docs/superpowers/plans/: 2026-04-04-experiment-analyzer.md  2026-04-06-guardrail-improvements.md  2026-04-07-frontend.md  2026-04-17-experiment-chatbot.md
docs/superpowers/specs/: 2026-04-06-guardrail-improvements-design.md  2026-04-07-frontend-design.md  2026-04-17-experiment-chatbot-design.md
tests/: test_analyzer.py  test_cli.py  test_config.py  test_findings.py  test_integration.py  test_loader.py  test_models.py  test_setup_wizard.py
tests/fixtures/: sample.csv  sample_config.yaml  sample_config_with_filter.yaml  sample_with_dates.csv
tests/test_renderers/: test_json_renderer.py  test_markdown.py
web/: CLAUDE.md  next.config.ts  package-lock.json  package.json  requirements.txt  vercel.json
web/api/: analyze.py  interaction.py  subgroup.py
web/app/: globals.css  layout.tsx  page.tsx
web/app/preview/: fixtures.ts  free-plus-result.json  page.tsx
web/components/__tests__/: AddMetrics.test.tsx  ChatPanel.test.tsx  ExperimentSetup.test.tsx  MetricCard.test.tsx  MetricForm.test.tsx  (+6 more)
web/lib/: api.ts  config-yaml.ts  csv.ts  experimentStore.ts  types.ts
web/tests/: test_api.py  test_interaction.py  test_subgroup.py
xp_analyzer/: analyzer.py  cli.py  config.py  findings.py  loader.py  models.py  setup_wizard.py
xp_analyzer/renderers/: json_renderer.py  markdown.py
xp_data/: free_plus_config.yaml  free_plus_experiment.csv  free_plus_report.md  key_questions.md
(+48 files in other folders)
