[project]
name = "xp-analyzer"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "pyyaml>=6.0",
    "click>=8.1",
]

[project.scripts]
xp-analyzer = "xp_analyzer.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
